# RFIDReader

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Research.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/plans/: add-readme-images.md  fix-observer-effect.md
.sisyphus/research/: ebs-cartridge-chip-analysis.md  mobile-data-transfer.md
docs/: EBS-CARTRIDGE-RESEARCH.md
src/: board.rs  main.rs  main_minimal.rs  main_test.rs
src/drivers/: audio.rs  mod.rs  pn532.rs  storage.rs
src/protocol/: mod.rs  st25tb.rs
src/ui/: display.rs  editor.rs  mod.rs
