[package]
name = "rfid-reader"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-bootloader-esp-idf = "0.1"
esp-backtrace = { version = "0.15", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32s3", "log"] }
esp-alloc = "0.7"
log = "0.4"

embedded-hal = "1.0"
embedded-hal-bus = "0.2"
embedded-graphics = "0.8"
mipidsi = "0.8"
display-interface-spi = "0.5"

heapless = "0.8"
libm = "0.2"
critical-section = "1.2"
fugit = "0.3"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[features]
default = []
